fixed swagger issues
